--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <div class="related">
       <h3>Navigation</h3>
       <ul>
+        <li class="right" style="margin-right: 10px">
+          <a href="genindex.html" title="General Index"
+             accesskey="I">index</a></li>
         <li><a href="#">python-geotiepoints v0.1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
@@ -208,6 +211,9 @@ package should be generic enough to be used for any kind of data.</p>
     <div class="related">
       <h3>Navigation</h3>
       <ul>
+        <li class="right" style="margin-right: 10px">
+          <a href="genindex.html" title="General Index"
+             >index</a></li>
         <li><a href="#">python-geotiepoints v0.1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
